# hand-cricket-MAB

./: Makefile  README.md  compose.yaml  start.ps1
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/services/: bandit.py  batters.py  bowlers.py  game.py
backend/services/: batters.py  game.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
src/: batters.py  bowlers.py  main.py
