[project]
name = "hand-cricket-backend"
version = "0.1.0"
description = "Backend for hand cricket."
readme = "README.md"
requires-python = "==3.13" # Must match Dockerfile Python version, and PyTorch doesn't have 3.14 support.
dependencies = [
    "fastapi>=0.119.0",
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "pydantic>=2.12.2",
    "torch>=2.8.0",
    "uvicorn>=0.38.0",
]
